Fixes #181 - Add QA scripts to easily test generated projects

--- a/packages/generator-liferay-bundle/src/facet-start/templates/scripts/start/index.html
+++ b/packages/generator-liferay-bundle/src/facet-start/templates/scripts/start/index.html
@@ -2,7 +2,7 @@
 <head>
 	<title><%= pkgName %> - <%= pkgVersion %></title>
 	<% if (cssPath) { %>
- 	<link rel="stylesheet" type="text/css" href="<%= cssPath %>"></link>
+ 	<link rel="stylesheet" type="text/css" href="/o/<%= pkgName %>/<%= cssPath %>"></link>
 	<% } %>
 </head>
 <body>
