--- a/packages/liferay-npm-build-support/src/resources/start/index.js.ejs
+++ b/packages/liferay-npm-build-support/src/resources/start/index.js.ejs
@@ -1,4 +1,4 @@
-var main = require('../../src/index.js');
+var main = require('<%= mainModule %>');
 
 var params = {
 	portletElementId: 'the-portlet',
