Fixes #203 - Adapt generator to previous changes

--- a/packages/generator-liferay-bundle/src/facet-project/templates/.npmbundlerrc.ejs
+++ b/packages/generator-liferay-bundle/src/facet-project/templates/.npmbundlerrc.ejs
@@ -1,6 +1,7 @@
 {
 	"create-jar": {
-		"auto-deploy-portlet": false
+		"auto-deploy-portlet": false,
+		"web-context-path": "/<%= name %>"		
 	},
 	"dump-report": true
 }
