Fixes #205 - Adapt generator to previous changes

--- a/packages/generator-liferay-bundle/src/facet-project/templates/.npmbundlerrc.ejs
+++ b/packages/generator-liferay-bundle/src/facet-project/templates/.npmbundlerrc.ejs
@@ -1,7 +1,8 @@
 {
 	"create-jar": {
 		"auto-deploy-portlet": false,
-		"web-context-path": "/<%= name %>"		
+		"web-context-path": "/<%= name %>",
+		"output-dir": "dist"		
 	},
 	"dump-report": true
 }
