Fixes #211 - Set lower limit on build packages version when generating a new project

--- a/packages/generator-liferay-bundle/src/facet-project/templates/package.json.ejs
+++ b/packages/generator-liferay-bundle/src/facet-project/templates/package.json.ejs
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "<%= description %>",
   "devDependencies": {
-    "liferay-npm-bundler": "^2.0.0",
-    "liferay-npm-build-support": "^2.0.0"
+    "liferay-npm-bundler": "<%= sdkVersion %>",
+    "liferay-npm-build-support": "<%= sdkVersion %>"
   },
   "dependencies": {},
   "scripts": {
